# Litch

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  push.bat  pushcommit.py  readme.md  shit.py
src/: globals.h  main.cpp
src/Core/: Entity.h  Game.cpp  Game.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Core/Audio/: RAudioExtensions.h
src/Core/Entities/: PlayerEntity.h
src/Core/Menu/: Menus.h  UIHelpers.h
src/Core/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h
src/Core/UI/: UIEngine.cpp  UIEngine.h
